<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_buscar"
        android:icon="@drawable/ic_buscar"
        android:title="@string/action_buscar"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_reservas"
        android:icon="@drawable/ic_reservas"
        android:title="@string/action_reservas"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_favoritos"
        android:icon="@drawable/ic_favoritos"
        android:title="@string/action_favoritos"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_config"
        android:icon="@drawable/ic_config"
        android:title="@string/action_config"
        app:showAsAction="ifRoom"/>
</menu>