<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetalleAlojamientoFragment"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/no_image_available"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/Title"
                android:text="Título alojamiento"/>

            <CheckBox
                android:id="@+id/favoritoCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/favourite_checkbox"
                android:theme="@style/FavouriteCheckbox"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/descripcionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:text="Descripción alojamiento"
            android:theme="@style/Subtitle"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/ic_ubicacion"
                android:theme="@style/IconOnText"/>

            <TextView
                android:id="@+id/ubicacionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Ubicacion alojamiento"
                android:theme="@style/DefaultTextView"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ViewStub
            android:id="@+id/tipoAlojamientoLayout"
            android:inflatedId="@+id/detalleHabitacionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/desde"
                android:layout_marginEnd="10sp"
                android:layout_gravity="center_vertical"
                android:theme="@style/DefaultTextView"/>

            <EditText
                android:id="@+id/desdeDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/DefaultEditText"
                android:hint="@string/seleccionar"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasta"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_gravity="center_vertical"
                android:theme="@style/DefaultTextView"/>

            <EditText
                android:id="@+id/hastaDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/DefaultEditText"
                android:hint="@string/seleccionar"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="60sp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:layout_marginEnd="10sp"
                android:theme="@style/DefaultEditText"/>

            <EditText
                android:id="@+id/cantidadEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/DefaultEditText"
                android:inputType="number"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/costo_estadia"
                android:layout_gravity="end|center_vertical"
                android:theme="@style/DefaultTextView"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/precioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="$0.00"
                android:layout_gravity="end|center_vertical"
                android:theme="@style/PriceTextView" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/reservarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/reservar"
            android:theme="@style/InverseButton"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>